--- a/index.html
+++ b/index.html
@@ -1,163 +1,170 @@
 <!DOCTYPE html>
 <html lang="en" id="htmlRoot">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <script>
-      /**
-       * 页面初始化
-       * 1、初始化网站主题、语言
-       */
-      (() => {
-        let htmlRoot = document.getElementById('htmlRoot');
-        let local = String(localStorage.getItem('locale'))
-        if(!local) {
-          localStorage.setItem('locale', 'zh_CN')
-        }
-        let theme = localStorage.getItem('vueuse-color-scheme') ? String(localStorage.getItem('vueuse-color-scheme')) : 'auto';
-        if (htmlRoot && theme) {
-          htmlRoot.setAttribute('data-theme', theme === 'auto' ? 'light' : 'dark');
-          theme = htmlRoot = null;
-        }
-      })();
-    </script>
-    <div id="app" class="global-theme">
-      <style>
-        html[data-theme="dark"] .app-loading {
-          background-color: #2c344a;
-        }
 
-        html[data-theme="dark"] .app-loading .app-loading-title {
-          color: rgb(255 255 255 / 85%);
-        }
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+</head>
 
-        .app-loading {
-          display: flex;
-          width: 100%;
-          height: 100%;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          background-color: #f4f7f9;
-        }
+<body>
+  <script>
+    /**
+     * 页面初始化
+     * 1、初始化网站主题、语言
+     */
+    (() => {
+      let htmlRoot = document.getElementById('htmlRoot');
+      let local = String(localStorage.getItem('locale'));
+      if (!local) {
+        localStorage.setItem('locale', 'zh_CN');
+      }
+      let theme = localStorage.getItem('vueuse-color-scheme') ? String(localStorage.getItem('vueuse-color-scheme')) : 'auto';
+      if (htmlRoot && theme) {
+        htmlRoot.setAttribute('data-theme', theme === 'auto' ? 'light' : 'dark');
+        theme = htmlRoot = null;
+      }
+    })();
+  </script>
+  <div id="app" class="global-theme">
+    <style>
+      html[data-theme="dark"] .app-loading {
+        background-color: #2c344a;
+      }
 
-        .app-loading .app-loading-wrap {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          display: flex;
-          transform: translate3d(-50%, -50%, 0);
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-        }
+      html[data-theme="dark"] .app-loading .app-loading-title {
+        color: rgb(255 255 255 / 85%);
+      }
 
-        .app-loading .dots {
-          display: flex;
-          padding: 98px;
-          justify-content: center;
-          align-items: center;
-        }
+      .app-loading {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #f4f7f9;
+      }
 
-        .app-loading .app-loading-title {
-          display: flex;
-          margin-top: 30px;
-          font-size: 30px;
-          color: rgb(0 0 0 / 85%);
-          justify-content: center;
-          align-items: center;
-        }
+      .app-loading .app-loading-wrap {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: flex;
+        transform: translate3d(-50%, -50%, 0);
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
 
-        .app-loading .app-loading-logo {
-          display: block;
-          width: 90px;
-          margin: 0 auto;
-          margin-bottom: 20px;
-        }
+      .app-loading .dots {
+        display: flex;
+        padding: 98px;
+        justify-content: center;
+        align-items: center;
+      }
 
-        .dot {
-          position: relative;
-          display: inline-block;
-          width: 48px;
-          height: 48px;
-          margin-top: 30px;
-          font-size: 32px;
-          transform: rotate(45deg);
-          box-sizing: border-box;
-          animation: antRotate 1.2s infinite linear;
-        }
+      .app-loading .app-loading-title {
+        display: flex;
+        margin-top: 30px;
+        font-size: 30px;
+        color: rgb(0 0 0 / 85%);
+        justify-content: center;
+        align-items: center;
+      }
 
-        .dot i {
-          position: absolute;
-          display: block;
-          width: 20px;
-          height: 20px;
-          background-color: #0065cc;
-          border-radius: 100%;
-          opacity: 30%;
-          transform: scale(0.75);
-          animation: antSpinMove 1s infinite linear alternate;
-          transform-origin: 50% 50%;
-        }
+      .app-loading .app-loading-logo {
+        display: block;
+        width: 90px;
+        margin: 0 auto;
+        margin-bottom: 20px;
+      }
 
-        .dot i:nth-child(1) {
-          top: 0;
-          left: 0;
-        }
+      .dot {
+        position: relative;
+        display: inline-block;
+        width: 48px;
+        height: 48px;
+        margin-top: 30px;
+        font-size: 32px;
+        transform: rotate(45deg);
+        box-sizing: border-box;
+        animation: antRotate 1.2s infinite linear;
+      }
 
-        .dot i:nth-child(2) {
-          top: 0;
-          right: 0;
-          animation-delay: 0.4s;
-        }
+      .dot i {
+        position: absolute;
+        display: block;
+        width: 20px;
+        height: 20px;
+        background-color: #0065cc;
+        border-radius: 100%;
+        opacity: 30%;
+        transform: scale(0.75);
+        animation: antSpinMove 1s infinite linear alternate;
+        transform-origin: 50% 50%;
+      }
 
-        .dot i:nth-child(3) {
-          right: 0;
-          bottom: 0;
-          animation-delay: 0.8s;
-        }
+      .dot i:nth-child(1) {
+        top: 0;
+        left: 0;
+      }
 
-        .dot i:nth-child(4) {
-          bottom: 0;
-          left: 0;
-          animation-delay: 1.2s;
+      .dot i:nth-child(2) {
+        top: 0;
+        right: 0;
+        animation-delay: 0.4s;
+      }
+
+      .dot i:nth-child(3) {
+        right: 0;
+        bottom: 0;
+        animation-delay: 0.8s;
+      }
+
+      .dot i:nth-child(4) {
+        bottom: 0;
+        left: 0;
+        animation-delay: 1.2s;
+      }
+
+      @keyframes antRotate {
+        to {
+          transform: rotate(405deg);
         }
-        @keyframes antRotate {
-          to {
-            transform: rotate(405deg);
-          }
+      }
+
+      @keyframes antRotate {
+        to {
+          transform: rotate(405deg);
         }
-        @keyframes antRotate {
-          to {
-            transform: rotate(405deg);
-          }
+      }
+
+      @keyframes antSpinMove {
+        to {
+          opacity: 100%;
         }
-        @keyframes antSpinMove {
-          to {
-            opacity: 100%;
-          }
+      }
+
+      @keyframes antSpinMove {
+        to {
+          opacity: 100%;
         }
-        @keyframes antSpinMove {
-          to {
-            opacity: 100%;
-          }
-        }
-      </style>
-      <div class="app-loading">
-        <div class="app-loading-wrap">
-          <img src="/resource/img/logo.png" class="app-loading-logo" alt="Logo" />
-          <div class="app-loading-dots">
-            <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
-          </div>
-          <div class="app-loading-title">Vite App</div>
+      }
+    </style>
+    <div class="app-loading">
+      <div class="app-loading-wrap">
+        <img src="/resource/img/logo.png" class="app-loading-logo" alt="Logo" />
+        <div class="app-loading-dots">
+          <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
         </div>
+        <div class="app-loading-title">Vite App</div>
       </div>
     </div>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  </div>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
