--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>May Blog Admin</title>
 </head>
 
 <body>
@@ -159,7 +159,7 @@
         <div class="app-loading-dots">
           <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
         </div>
-        <div class="app-loading-title">Vite App</div>
+        <div class="app-loading-title">May Blog Admin</div>
       </div>
     </div>
   </div>
