--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
      */
     (() => {
       let htmlRoot = document.getElementById('htmlRoot');
-      let local = String(localStorage.getItem('locale'));
+      let local = String(localStorage.getItem('may-blog-locale'));
       if (!local) {
-        localStorage.setItem('locale', 'zh_CN');
+        localStorage.setItem('may-blog-locale', 'zh_CN');
       }
-      let theme = localStorage.getItem('vueuse-color-scheme') ? String(localStorage.getItem('vueuse-color-scheme')) : 'auto';
+      let theme = localStorage.getItem('may-blog-theme') ? String(localStorage.getItem('may-blog-theme')) : 'auto';
       if (htmlRoot && theme) {
         htmlRoot.setAttribute('data-theme', theme === 'auto' ? 'light' : 'dark');
         theme = htmlRoot = null;
@@ -29,6 +29,16 @@
   </script>
   <div id="app" class="global-theme">
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      #app {
+        width: 100%;
+        height: 100vh;
+      }
+
       html[data-theme="dark"] .app-loading {
         background-color: #2c344a;
       }
