--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>May Blog Admin</title>
+  <script src="/resource/js/ac.min.js"></script>
 </head>
 
 <body>
